--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ hr {
 
 .btn {
   display: inline-block;
-  background: #;
-  color: #000;
+  background: #000;
+  color: #fff;
   text-decoration: none;
   padding: 1em 2em;
   border: 5px solid #000;
